# tamarisk

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug.sh
src/: log.c  main.c  neuron.c  vector.c
src/include/: global.h  log.h  neuron.h  vector.h
